Updating starter/final as needed

--- a/11-toolbar/projects/final/Journalyst/Journalyst/Base.lproj/Main.storyboard
+++ b/11-toolbar/projects/final/Journalyst/Journalyst/Base.lproj/Main.storyboard
@@ -313,7 +313,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="LRu-gI-zz3"/>
+        <segue reference="xv8-Jc-nAm"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" name="PrimaryTint"/>
     <resources>
